# AF-biomarker-discovery

./: .gitignore  GITHUB_DESCRIPTION.md  LICENSE  README.md  af_diagnosis_model.py  af_diagnosis_model_with_clinical.py  clinical_feature_comparison.csv  pyproject.toml  requirements.txt
.github/workflows/: run_model.yml
af_diagnosis/: __init__.py  cli.py  config.py  evaluation.py  inference.py  io.py  pipeline.py
data/: clinical_GSE41177.csv  clinical_GSE79768.csv
results/: feature_importance.csv  important_genes.csv  model_performance.csv
results_v2/: feature_importance.csv  lr_model_metadata.json  model_performance.csv  rf_model_metadata.json  svm_model_metadata.json
src/: af_diagnosis_model.py  af_diagnosis_model_with_clinical.py  clinical_feature_comparison.csv  feature_importance.csv
