[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "af-diagnosis"
version = "2.0.0"
description = "End-to-end atrial fibrillation diagnosis using gene expression and clinical features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ziheng Zheng"}
]
keywords = ["machine-learning", "bioinformatics", "atrial-fibrillation", "gene-expression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]
viz = [
    "seaborn>=0.11.0",
]

[project.scripts]
af-diagnosis = "af_diagnosis.cli:main"

[project.urls]
Homepage = "https://github.com/MikeOutlook/AF-biomarker-discovery"
Repository = "https://github.com/MikeOutlook/AF-biomarker-discovery"

[tool.setuptools]
packages = ["af_diagnosis"]

[tool.setuptools.package-data]
af_diagnosis = ["*.csv"]